# kanachan-reviewer

./: .dockerignore  .gitignore  analyzer.Dockerfile  analyzer.py  build.Dockerfile  build.sh  config.yaml  docker-compose.yaml  fetcher.Dockerfile  fetcher.py  frontend.Dockerfile  frontend.py  launch-and-close-chrome.py  launch-fetcher.sh  setup.cfg  setup.py  sniffer.py
.devcontainer/: devcontainer.json  post-create.sh
kanachan_reviewer/: config.py  logging.py  mahjongsoul.proto  redis.py  redis_log_handler.py  yostar_login.py
