[metadata]
name = kanachan-reviewer
version = 0.0.1
description = Reviewer for Mahjong Soul (雀魂) game records, powered by kanachan
author = Cryolite
author_email = cryolite.indigo@gmail.com
url = https://github.com/Cryolite/kanachan-reviewer

[options]
include_package_data = True
packages = find:
install_requires =
    boto3
    flask
    jsonschema
    mahjong==1.1.11
    mitmproxy
    pyyaml
    redis
    selenium
    torch
